--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "proxy": "http://localhost:8080",
     "server": "nodemon ./server/server.js"
-  }
+  },
+  "proxy": "http://localhost:8888"
 }
